--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -5,13 +5,13 @@ import {image_header,name} from '@projects'
 
 
 <Section>
-    <header class="flex content-center justify-center mt-14">
+    <header class="flex content-center justify-center mt-14 gap-4">
         <figure>
             <img src={image_header} alt={name} class="aspect-[1/1] object-cover w-80 rounded-md" />
         </figure>
         <div class="flex flex-col justify-center ml-4">
-            <h2 class="text-2xl font-bold">{name}'s</h2>
-            <h1 class="text-4xl">Tiny Showcase!</h1>
+            <h2 class=" text-2xl font-semibold tracking-tight">{name}'s</h2>
+            <h1 class="font-pacifico border-b pb-2 text-4xl font-semibold tracking-tight first:mt-0">Tiny Showcase!</h1>
         </div>
     </header>
 </Section>
