--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,7 +4,8 @@ interface Props {
 }
 
 const { title } = Astro.props;
-
+import '@fontsource/pacifico';
+import '@fontsource/anton';
 import '@/styles/global.css';
 ---
 
