--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -1,17 +1,30 @@
 ---
 import Section from "../Section.astro";
-import {image_header,name} from '@projects'
+import { image_header, name, github } from "@projects";
 ---
 
-
 <Section>
-    <header class="flex flex-col content-center justify-center mt-14 gap-4">
-        <figure class="flex justify-center ">
-            <img src={image_header} alt={name} class="aspect-[1/1] object-cover w-80 rounded-md" />
-        </figure>
-        <div class="flex flex-col justify-center ml-4">
-            <h2 class="text-stone-600 text-2xl font-semibold tracking-tight text-center">{name}'s</h2>
-            <h1 class="text-stone-800 font-pacifico pb-2 text-5xl font-semibold text-center tracking-tight first:mt-0">Tiny Showcase!</h1>
-        </div>
-    </header>
+  <header class="flex flex-col content-center justify-center mt-14 gap-4">
+    <figure class="flex justify-center">
+      <img
+        src={image_header}
+        alt={name}
+        class="aspect-[1/1] object-cover w-80 rounded-md"
+      />
+    </figure>
+    <a href=`${github}`>
+      <div class="flex flex-col justify-center ml-4">
+        <h2
+          class="text-stone-600 text-2xl font-semibold tracking-tight text-center"
+        >
+          {name}'s
+        </h2>
+      </div>
+      <h1
+        class="text-stone-800 font-pacifico pb-2 text-5xl font-semibold text-center tracking-tight first:mt-0"
+      >
+        Tiny Showcase!
+      </h1>
+    </a>
+  </header>
 </Section>
