--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -9,7 +9,7 @@ import { image_header, name, github } from "@projects";
       <img
         src={image_header}
         alt={name}
-        class="aspect-[1/1] object-cover w-80 rounded-md"
+        class="aspect-[1/1] object-contain w-96 rounded-md"
       />
     </figure>
     <a href=`${github}`>
