new-header + name

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import { name } from '@projects';
 
 ---
 
-<Layout title=`${name} - Tiny Showcase``>
+<Layout title=`${name} - Tiny Show``>
 	<main>
 		<Header/>
 		<Works/>
