--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -15,16 +15,23 @@ import { image_header, name, github } from "@projects";
     <a href=`${github}`>
       <div class="flex flex-col justify-center ml-4">
         <h2
-          class="text-stone-600 text-2xl font-semibold tracking-tight text-center"
+          class="text-stone-600 text-2xl font-anton tracking-tight text-center"
         >
           {name}'s
         </h2>
       </div>
-      <h1
+      <!-- <h1
         class="text-stone-800 font-pacifico pb-2 text-5xl font-semibold text-center tracking-tight first:mt-0"
       >
-        Tiny Showcase!
-      </h1>
+        Tiny Show!
+      </h1> -->
+      <figure class="flex justify-center ">
+        <img
+          src="/project_images/tinyshow-letters.png"
+          alt="tinyshow"
+          class=" object-contain w-[37rem] rounded-md"
+        />
+      </figure>
     </a>
   </header>
 </Section>
